index modification :tada:

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kanbam</title>
+    <title>Kanban</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>Kaban Board</h1>
+        <h1>Kanban Board</h1>
         <button class="primary">Nova Tarefa</button>
     </div>
 
